--- a/.github/workflows/blog-post-worflows.yml
+++ b/.github/workflows/blog-post-worflows.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Pull in dev.to posts
         uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://github.com/lmorillo96?tab=repositories/feed/"
+          feed_list: "https://github.com/lmorillo96?tab=repositories"
